welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: not found: value temps
    if (temp <=100 && temps >=60)
                      ^squirrelPlay:11: error: not found: value temps
    if (temp <=90 && temps >=60)
                     ^