welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (isSummer)
  {
    if (temp <=100 && temps >=60)
    	return true
    else
    	return false
  }
  else
  {
    if (temp <=90 && temps >=60)
    	return true
    else
    	return false
  }
}